[package]
name = "dsa-toolkit"
version = "0.1.0"
description = "A data structures and algorithms library for JavaScript and TypeScript, with performance optimized by Rust and WebAssembly."
authors = ["Hela Ben Khalfallah"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
